feat(main): fixed the protocol issue